--- a/.github/workflows/testsuite.yml
+++ b/.github/workflows/testsuite.yml
@@ -299,8 +299,14 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 10
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ${{ github.workspace }}\choco-cache
+          key: v2-msvc100
       - name: Set up MSVC100
         run: |
+          choco config set cacheLocation "${{ github.workspace }}\choco-cache"
           choco install vcexpress2010
       - name: Help
         shell: cmd
