--- a/.github/workflows/testsuite.yml
+++ b/.github/workflows/testsuite.yml
@@ -349,7 +349,8 @@ jobs:
           if (!(Test-Path "C:\strawberry\perl\bin")) {
             choco install strawberryperl
           }
-          echo @"C:\strawberry\c\bin
+          echo @"
+          C:\strawberry\c\bin
           C:\strawberry\perl\site\bin
           C:\strawberry\perl\bin" |
             Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
