--- a/.github/workflows/testsuite.yml
+++ b/.github/workflows/testsuite.yml
@@ -352,7 +352,8 @@ jobs:
           echo @"
           C:\strawberry\c\bin
           C:\strawberry\perl\site\bin
-          C:\strawberry\perl\bin" |
+          C:\strawberry\perl\bin
+          "@ |
             Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
       - name: Host perl -V
         run: perl -V
